--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
+# Ignore virtual environment directory
+venv/
+
+# Ignore log files
+*.log
+
+# Ignore IDE files
+.vscode/
+.idea/
+*.iml
+
+# Ignore compiled Python files
+*.pyc
+
+# Ignore environment configuration files
+.env
 
 *.pyc
-Main/tests/test_app.py
